Fix mobile menu close button not centered

--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ nav {
   border: none;
   color: #fff;
   font-size: 32px;
-  width: 10%;
+  width: 100%;
 }
 
 .header-menu-items-mobile {
